# MCP-Skeleton

./: .gitignore  CHANGELOG.md  CONTEXT_COMPRESSION_PRINCIPLES_20260507.md  CONTEXT_COMPRESSION_SPEC_20260428.md  CONTEXT_CROSS_PLATFORM_VALIDATION_REPORT_20260520.md  CONTEXT_INCREMENTAL_BENCHMARK_REPORT_20260508.md  CONTEXT_TEST_MATRIX_20260428.md  CONTEXT_V0_1_5_READINESS_NOTES_20260522.md  LICENSE  README.md  ROADMAP_20260520.md  install.ps1  install.sh  pyproject.toml
cli/: ail_cli.py  context_compression.py
testing/: cli_smoke.sh  context_scale_benchmark.py  dogfood_self_check.py  quickstart_check.py  release_readiness_check.py  run_cli_checks.py
